kubernetes/applications/smart-home/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hassio
  labels: {}
  annotations: {}
spec:
  type: ClusterIP
  selector: {}
  ports:
  - port: 8123
    name: http
    targetPort: http
    protocol: TCP
