kubernetes/applications/smart-home/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hassio
  namespace: smart-home
  labels: {}
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_set_header Upgrade "websocket";
      proxy_set_header Connection "Upgrade";
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &hostName hassio.mcmumf.dev
      secretName: hassio-cert
  rules:
    - host: *hostName
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: hassio
                port:
                  number: 8123
